# wildlife-detector-malilangwe

./: .gitignore  BACKLOG.md  README.md  STATUS.md  african_drone_shot.py  download_waid.py  pyproject.toml  requirements.txt  test_detect.py
config/: default.yaml  merged_classes.yaml
data/: waid.yaml
notebooks/: train_waid_colab.ipynb
scripts/: detect.py  evaluate.py  merge_datasets.py  prepare_datasets.py  train.py
src/: config.py
src/data/: __init__.py  dataset.py  merge.py
src/detection/: __init__.py  detector.py
src/tracking/: __init__.py  tracker.py
src/utils/: logging_setup.py  visualization.py
tests/: test_config.py  test_dataset.py  test_detection.py  test_logging.py  test_visualization.py
