[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wildlife-detector-malilangwe"
version = "0.1.0"
description = "Aerial drone wildlife detection and tracking for the Malilangwe Trust, Zimbabwe"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tadiwa M" },
]
dependencies = [
    "ultralytics>=8.3.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "lap>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
